KPBatchProgressDialog: Port from KDialog to QDialog
Behaviour:
* Clicking "Cancel" does not reject the dialog so it is not closed. This
    is new behaviour.
* Clicking "Close" (after Cancel button changed to Close) accepts and
    closes the dialog.

Implementation details:
* The Cancel/Close button is implemented as Close button in a
    QDialogButtonBox.
* Added method setButtonClose() for turning the "Cancel" button into
    "Close" button. A plugin should call this when some error occurs and
    it cannot continue its job. Because there is nothing to cancel
    anymore, the button should be renamed to "Close".
* The Cancel/Close button has standard text/tooltip/icon/whatsthis
    defined in KF5::WidgetsAddons' KStandardGuiItem.
* The signal cancelClicked() is emitted when user clicks Cancel/Close
    like before.

REVIEW: 123918

--- a/common/libkipiplugins/CMakeLists.txt
+++ b/common/libkipiplugins/CMakeLists.txt
@@ -45,6 +45,8 @@ target_link_libraries(KF5kipiplugins
                       ${TIFF_LIBRARIES}
                       ${PNG_LIBRARIES}
 
+                      KF5::WidgetsAddons
+
                       PUBLIC
                       Qt5::Gui
                       KF5::I18n
