--- a/.reviewboardrc
+++ b/.reviewboardrc
@@ -1,3 +1,3 @@
 REPOSITORY = "kipi-plugins"
 REVIEWBOARD_URL = "https://git.reviewboard.kde.org"
-TARGET_GROUPS = "digikam"
+TARGET_GROUPS = "kipi-plugins"
