apply patch #92915 to read / write and change of time zones from the metadata BUGS: 317920 FIXED-IN: 4.11.0

--- a/metadataedit/CMakeLists.txt
+++ b/metadataedit/CMakeLists.txt
@@ -19,6 +19,7 @@ set(kipiplugin_metadataedit_PART_SRCS plugin/plugin_metadataedit.cpp
                                       plugin/multivaluesedit.cpp
                                       plugin/objectattributesedit.cpp
                                       plugin/metadataedit.cpp
+                                      plugin/timezonecombobox.cpp
                                       exif/exifeditwidget.cpp
                                       exif/exifcaption.cpp
                                       exif/exifdatetime.cpp
