kmlexport: Rename class KMLExportConfig to KmlWindow
CCMAIL: mike@mghansen.de
CCMAIL: caulier.gilles@gmail.com

--- a/kmlexport/CMakeLists.txt
+++ b/kmlexport/CMakeLists.txt
@@ -10,7 +10,7 @@ set(kipiplugin_kmlexport_PART_SRCS plugin_kmlexport.cpp
                                    gpsdataparser.cpp
                                    kmlexport.cpp
                                    kmlgpsdataparser.cpp
-                                   kmlexportconfig.cpp
+                                   kmlwindow.cpp
 )
 
 add_library(kipiplugin_kmlexport MODULE ${kipiplugin_kmlexport_PART_SRCS})
