Remove duplicate check for QT_QTOPENGL_FOUND in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -243,7 +243,7 @@ if(KIPI_FOUND)
             set(BUILD_VIEWERS FALSE)
         endif()
     else()
-        if(OPENGL_FOUND AND OPENGL_GLU_FOUND AND QT_QTOPENGL_FOUND AND QT_QTOPENGL_FOUND)
+        if(OPENGL_FOUND AND OPENGL_GLU_FOUND AND QT_QTOPENGL_FOUND)
             set(BUILD_VIEWERS TRUE)
         elseif()
             set(BUILD_VIEWERS FALSE)
