Expoblending: Start porting to Qt5 / KF5
Compiles and works (porting not finished though).

--- a/expoblending/CMakeLists.txt
+++ b/expoblending/CMakeLists.txt
@@ -1,10 +1,13 @@
 #
 # Copyright (c) 2010-2014, Gilles Caulier, <caulier dot gilles at gmail dot com>
+# Copyright (c) 2015, Benjamin Girault, <benjamin dot girault at gmail dot com>
 #
 # Redistribution and use is allowed according to the terms of the BSD license.
 # For details see the accompanying COPYING-CMAKE-SCRIPTS file.
 
-subdirs(icons)
+add_definitions(-DTRANSLATION_DOMAIN=\"kipiplugin_expoblending\")
+
+add_subdirectory(icons)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/importwizard
                     ${CMAKE_CURRENT_SOURCE_DIR}/blendingdlg
@@ -40,22 +43,30 @@ foreach(_currentfile ${expoblending_common_SRCS})
         set_source_files_properties(${_currentfile} PROPERTIES COMPILE_FLAGS "-fPIC")
     endif()
 endforeach()
+# TODO: remove the following line after migration to QT5 
+set_source_files_properties(${expoblending_common_SRCS} PROPERTIES COMPILE_FLAGS "-Wno-deprecated-declarations -fPIC")
 
 add_library(libexpoblending STATIC ${expoblending_common_SRCS})
 
 target_link_libraries(libexpoblending
                       KF5::Parts
-                      
+                      KF5::KDELibs4Support
                       KF5::Kipi
                       KF5::KExiv2
                       KF5::KDcraw
+                      KF5::ConfigCore
                       KF5kipiplugins
+                      ${KF5KDcraw_LIBRARIES}
+                      ${KF5Kipi_LIBRARIES}
+                      ${KF5KExiv2_LIBRARIES}
                      )
 
 # =======================================================
 # ExpoBlending plugin
 
 set(kipiplugin_expoblending_PART_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/plugin/plugin_expoblending.cpp)
+# TODO: remove the following line after migration to QT5 
+set_source_files_properties(${kipiplugin_expoblending_PART_SRCS} PROPERTIES COMPILE_FLAGS "-Wno-deprecated-declarations -fPIC")
 
 add_library(kipiplugin_expoblending MODULE ${kipiplugin_expoblending_PART_SRCS})
 
@@ -71,8 +82,10 @@ install(FILES   plugin/kipiplugin_expoblendingui.rc                             
 # Stand alone version of ExpoBlending plugin
 
 set(expoblending_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/plugin/expoblending.cpp)
+# TODO: remove the following line after migration to QT5 
+set_source_files_properties(${expoblending_SRCS} PROPERTIES COMPILE_FLAGS "-Wno-deprecated-declarations -fPIC")
 
-file(GLOB ICONS_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/./icons/*kipi-expoblending.png")
+file(GLOB ICONS_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/./icons/hi*-apps-kipi-expoblending.png")
 ecm_add_app_icon(expoblending_SRCS ICONS ${ICONS_SRCS})
 
 add_executable(expoblending ${expoblending_SRCS})
